objects/Opportunity_Split__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Barclays Africa</fullName>
                </value>
                <value>
                    <fullName>Barclays</fullName>
                </value>
                <value>
                    <fullName>RBB Retail</fullName>
                </value>
                <value>
                    <fullName>RBB BB</fullName>
                </value>
                <value>
                    <fullName>RBB Card</fullName>
                </value>
                <value>
                    <fullName>CIB Markets</fullName>
                </value>
                <value>
                    <fullName>CIB Banking</fullName>
                </value>
                <value>
                    <fullName>CIB Corporate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Ghana</fullName>
                </value>
                <value>
                    <fullName>Kenya</fullName>
                </value>
                <value>
                    <fullName>Mauritius Offshore</fullName>
                </value>
                <value>
                    <fullName>Mauritius Onshore</fullName>
                </value>
                <value>
                    <fullName>Mozambique</fullName>
                </value>
                <value>
                    <fullName>Seychelles</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Tanzania</fullName>
                </value>
                <value>
                    <fullName>Uganda</fullName>
                </value>
                <value>
                    <fullName>Zambia</fullName>
                </value>
                <value>
                    <fullName>Zimbabwe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barclays Card</fullName>
                </value>
                <value>
                    <fullName>Barclays IB</fullName>
                </value>
                <value>
                    <fullName>CIB</fullName>
                </value>
                <value>
                    <fullName>PCB</fullName>
                </value>
                <value>
                    <fullName>RBB</fullName>
                </value>
                <value>
                    <fullName>WIMI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Revenue Splits</relationshipLabel>
        <relationshipName>Opportunity_Splits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <defaultValue>0.1</defaultValue>
        <label>Percentage</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Split_Annualised_Income__c</fullName>
        <formula>Percentage__c * Opportunity__r.Annualised_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split Annualised Income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Income_this_Year__c</fullName>
        <formula>Percentage__c * Opportunity__r.Income_this_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split Income this Year</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <label>Revenue Split</label>
    <nameField>
        <displayFormat>RS{00000}</displayFormat>
        <label>Revenue Split Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Percentage_Between_1_And_100</fullName>
        <active>true</active>
        <errorConditionFormula>Percentage__c &lt; 0.01  || 
Percentage__c &gt; 1</errorConditionFormula>
        <errorMessage>Percentage must be between 1 and 100.</errorMessage>
    </validationRules>
</CustomObject>